# best-of-n-hierarchical-skill-options

./: .gitignore  README.md  pyproject.toml  requirements.txt
bonoptions/: __init__.py  planner.py  scoring.py
bonoptions/experiments/: __init__.py  common.py  run_all.py  run_claim_audit.py  run_smoke.py
docs/: claims.md  final_audit.md  novelty_map.md  proof_attack.md  reviewer_attacks.md
paper/: build_fallback_pdf.py  main.tex  references.bib
paper/final/: best of n hierarchical skill options-v4-manifest.json  build_log.md
results/: all_selection.csv  claim_audit.json  finite_n_validation.csv  handoff_robustness.csv  handoff_robustness_claims.json  smoke_finite_n.csv  smoke_selection.csv
results/tables/: handoff_robustness_summary.csv  selection_summary.csv
results/taxi_option_benchmark/: aggregate.json  effects.csv  metrics.csv
scripts/: build_paper.ps1
skill_handoff_audit/: __init__.py  core.py  planner.py  scoring.py  taxi_benchmark.py
skill_handoff_audit/experiments/: __init__.py  common.py  run_all.py  run_claim_audit.py  run_handoff_robustness.py  run_smoke.py  run_taxi_benchmark.py
tests/: test_experiments.py  test_options.py  test_planner.py  test_taxi_benchmark.py
