[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-handoff-audit"
version = "0.1.0"
description = "Handoff-feasibility audits for proxy-tail planning over hierarchical robot skills."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Anonymous"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "gymnasium>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["skill_handoff_audit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
